--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
             </div>
         </div>
     </section>
-    <!-- About Section Ends -->
+    <!------------------------ About Section Ends ---------------------->
 
-    <!-- Client Logo Section Starts -->
+    <!-- ---------------------Client Logo Section Starts ---------------->
     <section class="client-logo-sec">
         <div class="container">
             <div class="row">
@@ -234,7 +234,7 @@
 
     <!-- Client Logo Section Ends -->
 
-    <!-- Service Section Starts -->
+    <!--------------------- Service Section Starts ----------------->
 
     <section class="service-section">
         <div class="container">
@@ -404,9 +404,9 @@
 			 <h4>Web 3</h4>
 			 <p>Web</p>
 			</div>
-		     <div  class="port-icon>
+		     <div  class="port-icon">
 			    <span><i class="las la-plus"></i></span>
-			  <span><i class="las la-link"></i></span>
+			    <span><i class="las la-link"></i></span>
 			 </div>
 		   </div>
 		</div>
@@ -423,7 +423,7 @@
 			  <h4>App 2</h4>
 			  <p>App</p>
 			</div>
-		     <div class="port-icon>
+		     <div class="port-icon">
 			    <span><i class="las la-plus"></i></span>
 			  <span><i class="las la-link"></i></span>
 			 </div>
@@ -442,7 +442,7 @@
 			  <h4>Card 2</h4>
 			  <p>Card</p>
 			</div>
-		     <div class="port-icon>
+		     <div class="port-icon">
 			    <span><i class="las la-plus"></i></span>
 			   <span><i class="las la-link"></i></span>
 			 </div>
@@ -548,9 +548,9 @@
    </div>
   </div>
  </section>
- <!----portfolio section ends---------->
+ <!-----------------------------------portfolio section ends---------->
  
- <!----team section starts---------->
+ <!-----------------------------------team section starts---------->
  <section class="team">
   <div class="container">
      <div class="team-head">
@@ -632,9 +632,9 @@
 	 
   </div>
  </section>
- <!----team section ends---------->
+ <!--------------------------team section ends-------------------------->
  
- <!----pricing section starts---------->
+ <!--------------------------pricing section starts-------------------->
  
  <section class="pricing">
     <div class="container">
@@ -707,8 +707,9 @@
 		 </div>
 		 
 		 <div class="col-lg-3">
-		    <div class="price-pic">
-			  <div class="content">
+		    <div class="price-pic ">
+			  <div class="content advance-pic ">
+			    <span class="advance">Advanced</span>
 			    <h3>Ultimate</h3>
 	             <h4><sup class="sym">$</sup>
 				 49
@@ -730,7 +731,8 @@
 	</div>
  </section>
  
- <!----pricing section ends---------->
+ <!------------------------pricing section ends---------------------------->
+ 
  <section class="faq"> 
     <div class="container">
 	  <div class="faq-head">
@@ -749,7 +751,7 @@
 	</div>
  </section>
  
- <!----faq section ends---------->
+ <!-----------------------------------faq section ends----------------------->
  
  <section class="contact">
     <div class="container">
