--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 		    <div class="pic-content">
              <h3>Our Care</h3>
 			 <p>Nostrum eum sed et autem dolorum perspiciatis. Magni porro quisquam laudantium voluptatem.</p>
-			 <a href="#"><<i class="las la-arrow-right"></i></i>Read More</a>
+			 <a href="#"><i class="las la-arrow-right"></i></i>Read More</a>
 			</div>
 		 </div>
 		</div>
