--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/responsive.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&family=Open+Sans:wght@300;400;500;600;700&family=Raleway:ital,wght@0,500;1,400&display=swap"
       rel="stylesheet"
@@ -18,6 +19,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+
     <title>Flexor</title>
   </head>
   <body>
@@ -28,7 +30,7 @@
       <div class="header-info">
         <div class="container">
           <div class="row justify-space-between">
-            <div class="col-lg-6">
+            <div class="col-lg-6 space">
               <div class="contact-info">
                 <a href="#"
                   ><i class="fa fa-envelope-o" aria-hidden="true"></i
@@ -141,8 +143,8 @@
           </div>
           <div class="col-lg-8">
             <div class="row">
-              <div class="col-lg-4">
-                <div class="small-box">
+              <div class="col-lg-4 addedspace">
+                <div class="small-box edit">
                   <i class="fa fa-list-alt" aria-hidden="true"></i>
                   <h2>Corporis voluptates sit</h2>
                   <p>
@@ -151,8 +153,8 @@
                   </p>
                 </div>
               </div>
-              <div class="col-lg-4">
-                <div class="small-box">
+              <div class="col-lg-4 addedspace">
+                <div class="small-box edit">
                   <i class="fa fa-cube" aria-hidden="true"></i>
                   <h2>Ullamco laboris ladore pan</h2>
                   <p>
@@ -161,8 +163,8 @@
                   </p>
                 </div>
               </div>
-              <div class="col-lg-4">
-                <div class="small-box">
+              <div class="col-lg-4 addedspace">
+                <div class="small-box edit">
                   <i class="fa fa-picture-o" aria-hidden="true"></i>
                   <h2>Labore consequatur</h2>
                   <p>
@@ -250,32 +252,32 @@
     <section class="client-logo-sec">
       <div class="container">
         <div class="row">
-          <div class="col-lg-2">
+          <div class="col-lg-2 col-sm-6 client-pic">
             <div class="client-logo">
               <img src="./images/client-1.png" alt="image" />
             </div>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-2 col-sm-6 client-pic">
             <div class="client-logo">
               <img src="./images/client-2.png" alt="image" />
             </div>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-2 temp client-pic">
             <div class="client-logo">
               <img src="./images/client-3.png" alt="image" />
             </div>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-2 temp client-pic">
             <div class="client-logo">
               <img src="./images/client-4.png" alt="image" />
             </div>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-2 temp no-pic">
             <div class="client-logo">
               <img src="./images/client-5.png" alt="image" />
             </div>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-2 temp no-pic">
             <div class="client-logo">
               <img src="./images/client-6.png" alt="image" />
             </div>
@@ -313,7 +315,7 @@
           </p>
         </div>
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-4 service-sec1">
             <div class="service-items">
               <div class="si-icon">
                 <i class="las la-suitcase"></i>
@@ -325,7 +327,7 @@
               </p>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 service-sec1">
             <div class="service-items">
               <div class="si-icon">
                 <i class="las la-list-alt"></i>
@@ -337,7 +339,7 @@
               </p>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 service-sec1">
             <div class="service-items">
               <div class="si-icon">
                 <i class="las la-chart-bar"></i>
@@ -349,7 +351,7 @@
               </p>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 service-sec1">
             <div class="service-items">
               <div class="si-icon">
                 <i class="las la-binoculars"></i>
@@ -361,7 +363,7 @@
               </p>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 service-sec1">
             <div class="service-items">
               <div class="si-icon">
                 <i class="las la-sun"></i>
@@ -373,7 +375,7 @@
               </p>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 service-sec1">
             <div class="service-items">
               <div class="si-icon">
                 <i class="fa fa-calendar" aria-hidden="true"></i>
@@ -392,7 +394,7 @@
     <section class="service-pic">
       <div class="container">
         <div class="row align-item-center">
-          <div class="col-lg-6">
+          <div class="col-lg-6 service-large">
             <div class="pictures pic1">
               <div class="pic-content">
                 <h3>Our Mission</h3>
@@ -404,7 +406,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 service-large">
             <div class="pictures pic2">
               <div class="pic-content">
                 <h3>Our Plan</h3>
@@ -416,7 +418,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 service-large">
             <div class="pictures pic3">
               <div class="pic-content">
                 <h3>Our Vision</h3>
@@ -428,7 +430,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 service-large">
             <div class="pictures pic4">
               <div class="pic-content">
                 <h3>Our Care</h3>
@@ -489,7 +491,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-4 portfolio-sec1">
             <div class="portfolia-pic">
               <div class="port-img">
                 <img src="./images/portfolio-1.jpg" alt="no-image" />
@@ -507,7 +509,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4 portfolio-sec1">
             <div class="portfolia-pic">
               <div class="port-img">
                 <img src="./images/portfolio-2.jpg" alt="no-image" />
@@ -525,7 +527,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4 portfolio-sec1">
             <div class="portfolia-pic">
               <div class="port-img">
                 <img src="./images/portfolio-3.jpg" alt="no-image" />
@@ -543,7 +545,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4 portfolio-sec1">
             <div class="portfolia-pic">
               <div class="port-img">
                 <img src="./images/portfolio-4.jpg" alt="no-image" />
@@ -561,7 +563,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4 portfolio-sec1">
             <div class="portfolia-pic">
               <div class="port-img">
                 <img src="./images/portfolio-5.jpg" alt="no-image" />
@@ -579,7 +581,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4 portfolio-sec1">
             <div class="portfolia-pic">
               <div class="port-img">
                 <img src="./images/portfolio-6.jpg" alt="no-image" />
@@ -597,7 +599,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4 portfolio-sec1">
             <div class="portfolia-pic">
               <div class="port-img">
                 <img src="./images/portfolio-7.jpg" alt="no-image" />
@@ -615,7 +617,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4 portfolio-sec1">
             <div class="portfolia-pic">
               <div class="port-img">
                 <img src="./images/portfolio-8.jpg" alt="no-image" />
@@ -633,7 +635,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4 portfolio-sec1">
             <div class="portfolia-pic">
               <div class="port-img">
                 <img src="./images/portfolio-9.jpg" alt="no-image" />
@@ -668,7 +670,7 @@
           </p>
         </div>
         <div class="row">
-          <div class="col-lg-3">
+          <div class="col-lg-3 team-sec1">
             <div class="team-pictures">
               <div class="team-pic">
                 <img src="./images/team-1.jpg" alt="no image" />
@@ -694,7 +696,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 team-sec1">
             <div class="team-pictures">
               <div class="team-pic">
                 <img src="./images/team-2.jpg" alt="no image" />
@@ -720,7 +722,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 team-sec1">
             <div class="team-pictures">
               <div class="team-pic">
                 <img src="./images/team-3.jpg" alt="no image" />
@@ -739,13 +741,13 @@
                   ></a>
                 </div>
               </div>
-              <div class="team-name">
+              <div class="team-name ">
                 <h4>William Anderson</h4>
                 <p>CTO</p>
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 team-sec1">
             <div class="team-pictures">
               <div class="team-pic">
                 <img src="./images/team-4.jpg" alt="no image" />
@@ -790,7 +792,7 @@
           </p>
         </div>
         <div class="row">
-          <div class="col-lg-3">
+          <div class="col-lg-3 price-pic1">
             <div class="price-pic">
               <div class="content">
                 <h3>Free</h3>
@@ -813,8 +815,8 @@
             </div>
           </div>
 
-          <div class="col-lg-3">
-            <div class="price-pic">
+          <div class="col-lg-3 price-pic1">
+            <div class="price-pic ">
               <div class="content">
                 <h3 class="con-h3">Business</h3>
                 <h4>
@@ -836,7 +838,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3">
+          <div class="col-lg-3 price-pic1">
             <div class="price-pic">
               <div class="content">
                 <h3>Developer</h3>
@@ -859,7 +861,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3">
+          <div class="col-lg-3 price-pic1">
             <div class="price-pic">
               <div class="content advance-pic">
                 <span class="advance">Advanced</span>
@@ -1042,7 +1044,7 @@
     <section class="last-section">
       <div class="container">
         <div class="row">
-          <div class="col-lg-3">
+          <div class="col-lg-3 last-sec1">
             <div class="last-list">
               <h3 class="head">Flexor</h3>
               <p>
@@ -1054,7 +1056,7 @@
               <p><span>Email</span>: info@example.com</p>
             </div>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-2 last-sec1">
             <div class="last-list">
               <h3>Useful Links</h3>
               <ul class="last-li">
@@ -1090,7 +1092,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 last-sec1">
             <div class="last-list">
               <h3>Our Services</h3>
               <ul class="last-li">
@@ -1127,7 +1129,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 last-sec1">
             <div class="last-list">
               <h3 class="last-col">Join Our Newsletter</h3>
               <p class="last-col">
