--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="header-info">
         <div class="container">
           <div class="row justify-space-between">
-            <div class="col-lg-6 space">
+            <div class="col-lg-6 head-cont space">
               <div class="contact-info">
                 <a href="#"
                   ><i class="fa fa-envelope-o" aria-hidden="true"></i
@@ -39,7 +39,7 @@
                 <i class="fa fa-mobile" aria-hidden="true"></i>+1 5589 55488 55
               </div>
             </div>
-            <div class="col-lg-3 text-align-right">
+            <div class="col-lg-3 head-getstarted text-align-right">
               <div class="info-btn">
                 <a href="#">Get Started</a>
               </div>
