--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       <div class="nav-section">
         <div class="container">
           <div class="row">
-            <div class="col-lg-3">
+            <div class="col-lg-3 header1">
               <h1 class="logo">
                 <a href="#">Flexor</a>
               </h1>
             </div>
-            <div class="col-lg-9">
+            <div class="col-lg-9 header2">
               <nav class="navbar">
                 <ul class="list">
                   <li><a class="l1" href="#">Home</a></li>
@@ -165,7 +165,9 @@
               </div>
               <div class="col-lg-4 addedspace">
                 <div class="small-box edit">
-                  <i class="fa fa-picture-o" aria-hidden="true"></i>
+                  <div>
+                    <i class="fa fa-picture-o" aria-hidden="true"></i>
+                  </div>
                   <h2>Labore consequatur</h2>
                   <p>
                     Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut
@@ -185,12 +187,12 @@
     <section class="about-section">
       <div class="container">
         <div class="row">
-          <div class="col-lg-5">
+          <div class="col-lg-5 abt1">
             <div class="about-img">
               <i class="fa fa-play" aria-hidden="true"></i>
             </div>
           </div>
-          <div class="col-lg-7">
+          <div class="col-lg-7 abt2">
             <div class="about-content">
               <p class="para1">About us</p>
               <h1>Enim quis est voluptatibus aliquid consequatur fugiat</h1>
@@ -272,12 +274,12 @@
               <img src="./images/client-4.png" alt="image" />
             </div>
           </div>
-          <div class="col-lg-2 temp no-pic">
+          <div class="col-lg-2 temp no-pic client-pic">
             <div class="client-logo">
               <img src="./images/client-5.png" alt="image" />
             </div>
           </div>
-          <div class="col-lg-2 temp no-pic">
+          <div class="col-lg-2 temp no-pic client-pic">
             <div class="client-logo">
               <img src="./images/client-6.png" alt="image" />
             </div>
@@ -306,7 +308,7 @@
     <section class="service-section">
       <div class="container">
         <div class="section-title">
-          <h1>Services</h1>
+          <h2>Services</h2>
           <p>
             Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
             aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos
@@ -320,7 +322,7 @@
               <div class="si-icon">
                 <i class="las la-suitcase"></i>
               </div>
-              <h3>LOREM IPSUM</h3>
+              <a href="#">LOREM IPSUM</a>
               <p>
                 Voluptatum deleniti atque corrupti quos dolores et quas
                 molestias excepturi sint occaecati cupiditate non provident
@@ -332,7 +334,7 @@
               <div class="si-icon">
                 <i class="las la-list-alt"></i>
               </div>
-              <h3>DOLOR SITEMA</h3>
+              <a href="#">DOLOR SITEMA</a>
               <p>
                 Minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 aliquip ex ea commodo consequat tarad limino ata
@@ -344,7 +346,7 @@
               <div class="si-icon">
                 <i class="las la-chart-bar"></i>
               </div>
-              <h3>SED UT PERSPICIATIS</h3>
+              <a href="#">SED UT PERSPICIATIS</a>
               <p>
                 Duis aute irure dolor in esse reprehenderit in voluptate velit
                 esse cillum dolore eu fugiat nulla pariatur
@@ -356,7 +358,7 @@
               <div class="si-icon">
                 <i class="las la-binoculars"></i>
               </div>
-              <h3>MAGNI DOLORES</h3>
+              <a href="#">MAGNI DOLORES</a>
               <p>
                 Excepteur sint occaecat cupidatat non proident, sunt in culpa
                 qui officia deserunt mollit anim id est laborum
@@ -368,7 +370,7 @@
               <div class="si-icon">
                 <i class="las la-sun"></i>
               </div>
-              <h3>NEMO ENIM</h3>
+              <a href="#">NEMO ENIM</a>
               <p>
                 At vero eos et accusamus et iusto odio dignissimos ducimus qui
                 blanditiis praesentium voluptatum deleniti atque
@@ -380,7 +382,7 @@
               <div class="si-icon">
                 <i class="fa fa-calendar" aria-hidden="true"></i>
               </div>
-              <h3>EIUSMOD TEMPOR</h3>
+              <a href="#">EIUSMOD TEMPOR</a>
               <p>
                 Et harum quidem rerum facilis est et expedita distinctio. Nam
                 libero tempore, cum soluta nobis est eligendi
@@ -797,8 +799,7 @@
               <div class="content">
                 <h3>Free</h3>
                 <h4>
-                  <sup class="sym">$</sup>
-                  0
+                  <sup class="sym">$</sup>0
                   <span class="month">/month</span>
                 </h4>
                 <div class="price-cont">
@@ -809,7 +810,7 @@
                   <p class="grey"><del>Massa ultricies mi</del></p>
                 </div>
                 <div class="buy">
-                  <p>Buy Now</p>
+                  <a href="#">Buy Now</a>
                 </div>
               </div>
             </div>
@@ -820,8 +821,7 @@
               <div class="content">
                 <h3 class="con-h3">Business</h3>
                 <h4>
-                  <sup class="sym">$</sup>
-                  19
+                  <sup class="sym">$</sup>19
                   <span class="month">/month</span>
                 </h4>
                 <div class="price-cont">
@@ -832,7 +832,7 @@
                   <p class="grey"><del>Massa ultricies mi</del></p>
                 </div>
                 <div class="buy">
-                  <p>Buy Now</p>
+                  <a href="#">Buy Now</a>
                 </div>
               </div>
             </div>
@@ -843,8 +843,7 @@
               <div class="content">
                 <h3>Developer</h3>
                 <h4>
-                  <sup class="sym">$</sup>
-                  29
+                  <sup class="sym">$</sup>29
                   <span class="month">/month</span>
                 </h4>
                 <div class="price-cont">
@@ -855,7 +854,7 @@
                   <p>Massa ultricies mi</p>
                 </div>
                 <div class="buy">
-                  <p>Buy Now</p>
+                  <a href="#">Buy Now</a>
                 </div>
               </div>
             </div>
@@ -867,8 +866,7 @@
                 <span class="advance">Advanced</span>
                 <h3>Ultimate</h3>
                 <h4>
-                  <sup class="sym">$</sup>
-                  49
+                  <sup class="sym">$</sup>49
                   <span class="month">/month</span>
                 </h4>
                 <div class="price-cont">
@@ -879,7 +877,7 @@
                   <p>Massa ultricies mi</p>
                 </div>
                 <div class="buy">
-                  <p>Buy Now</p>
+                  <a href="#">Buy Now</a>
                 </div>
               </div>
             </div>
@@ -893,7 +891,7 @@
     <section class="faq">
       <div class="container">
         <div class="faq-head">
-          <h3>F.A.Q</h3>
+          <h3 >F.A.Q</h3>
           <p>
             Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
             aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos
@@ -979,7 +977,7 @@
           </p>
         </div>
         <div class="row justify-center">
-          <div class="col-lg-3">
+          <div class="col-lg-3 contact1">
             <div class="contact-details">
               <div>
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
@@ -993,7 +991,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 contact1">
             <div class="contact-details">
               <div>
                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
@@ -1007,7 +1005,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 contact1">
             <div class="contact-details">
               <div>
                 <i class="las la-phone-volume"></i>
@@ -1052,8 +1050,8 @@
                 New York, NY 535022<br />
                 United States
               </p>
-              <p><span>Phone</span>: +1 5589 55488 55</p>
-              <p><span>Email</span>: info@example.com</p>
+              <p><span class="phone">Phone</span>: +1 5589 55488 55</p>
+              <p><span class="phone">Email</span>: info@example.com</p>
             </div>
           </div>
           <div class="col-lg-2 last-sec1">
@@ -1142,17 +1140,21 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+
+        <section>
         <div class="footer">
           <div class="container">
             <div class="row justify-space-between">
-              <div class="col-lg-3">
+              <div class="col-lg-3 footer-sec">
                 <p>
-                  © Copyright <span class="bold">Flexor</span>. All Rights
+                  © Copyright <span class="phone">Flexor</span>. All Rights
                   Reserved
                 </p>
                 <p>Designed by <span class="color">BootstrapMade</span></p>
               </div>
-              <div class="col-lg-3">
+              <div class="col-lg-3 footer-sec">
                 <div class="footer-icon">
                   <a href="#"
                     ><i class="fa fa-twitter" aria-hidden="true"></i
@@ -1172,7 +1174,7 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
+        </section>
+    
   </body>
 </html>
