--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
     <!-- Banner Content Starts -->
     <section class="banner-boxes">
       <div class="container">
-        <div class="row align-item-center">
-          <div class="col-lg-4">
+        <div class="row align-item-center alignment">
+          <div class="col-lg-4 big-align">
             <div class="big-box">
               <h1>Why Choose Flexor for your company website?</h1>
               <p>
@@ -141,7 +141,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-8">
+          <div class="col-lg-8 small-align">
             <div class="row">
               <div class="col-lg-4 addedspace">
                 <div class="small-box edit">
