--- a/index.html
+++ b/index.html
@@ -1148,11 +1148,8 @@
           <div class="container">
             <div class="row justify-space-between">
               <div class="col-lg-3 footer-sec">
-                <p>
-                  © Copyright <span class="phone">Flexor</span>. All Rights
-                  Reserved
-                </p>
-                <p>Designed by <span class="color">BootstrapMade</span></p>
+        
+                <p>Designed by <span class="color">SARANYA</span></p>
               </div>
               <div class="col-lg-3 footer-sec">
                 <div class="footer-icon">
